# Social-media-automated-operation

./: .gitignore  COMPILE_AND_TEST.md  Cargo.toml  FINAL_REPORT.md  PHASE6_TEST_REPORT.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  TEST_REPORT.md  config.yaml  test.txt  test_post.txt  需求.md
docs/superpowers/plans/: 2026-03-17-social-auto-foundation.md
docs/superpowers/specs/: 2026-03-17-social-media-automation-design.md
src/: lib.rs  main.rs
src/browser/: behavior.rs  engine.rs  mod.rs  stealth.rs  stealth_scripts.js
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs  settings.rs
src/core/: account_manager.rs  executor.rs  mod.rs  scheduler.rs
src/db/: mod.rs  operations.rs  schema.rs
src/models/: account.rs  content.rs  mod.rs  task.rs
src/utils/: crypto.rs  logger.rs  mod.rs
src/web/: mod.rs  server.rs  state.rs
src/web/routes/: accounts.rs  contents.rs  mod.rs  stats.rs  tasks.rs  websocket.rs
tests/: config_tests.rs  db_operations.rs  model_tests.rs
tests/common/: mod.rs
tests/unit/: mod.rs
web-ui/: app.js  index.html  styles.css
